# convox

./: .env.example  .gitignore  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  convox-final-strategy.md  docker-compose.yml  docker-entrypoint.sh  funding.json
.claude/: settings.json
.well-known/: funding-manifest-urls
api/: pyproject.toml
api/convox/: app.py  config.py
api/convox/compliance/: base.py
api/convox/crypto/: __init__.py
api/convox/database/: postgres.py  redis.py
api/convox/handler/: agents.py  analytics.py  auth.py  health.py  providers.py  sessions.py
api/convox/middleware/: auth.py  cors.py  logger.py
api/convox/model/: __init__.py
api/convox/providers/: __init__.py  base.py
api/convox/providers/stt/: sarvam.py
api/convox/providers/tts/: sarvam.py
api/convox/repository/: __init__.py
api/convox/service/: cost.py
api/migrations/: 20260225000001_create_users.sql  20260225000002_create_agents.sql  20260225000003_create_sessions.sql  20260225000004_create_transcripts.sql  20260225000005_create_cost_events.sql  20260225000006_create_consent_events.sql  20260225000007_create_audit_log.sql  20260225000008_create_provider_configs.sql
api/tests/: conftest.py  test_health.py
docs/: architecture.md  phases.md  project-plan.md  project-structure.md  python-vs-go.md  tech-specs.md
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/lib/: api.ts
web/src/routes/: AgentList.tsx  Landing.tsx  Overview.tsx  Placeholder.tsx  SessionList.tsx
web/src/types/: index.ts
(+1 files in other folders)
